# LVI-SAM

./: .gitignore  CMakeLists.txt
src/: cloud_info.h  lvi_sam_node.cpp  ros_compat.h
src/lidar_odometry/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  utility.h
src/lvi_sam/: node_interface.h
src/visual_odometry/visual_estimator/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/visual_odometry/visual_estimator/factor/: imu_factor.h  integration_base.h  marginalization_factor.h  projection_factor.h  projection_td_factor.h
src/visual_odometry/visual_estimator/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
src/visual_odometry/visual_estimator/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
src/visual_odometry/visual_feature/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
src/visual_odometry/visual_loop/: keyframe.cpp  keyframe.h  loop_detection.cpp  loop_detection.h  loop_detection_node.cpp  parameters.h
